Fix nav on mobile

--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -12,55 +12,69 @@
     left: 0;
     width: 6.5rem;
     height: 100vh;
-    transition: opacity .5s ease;
-    display: flex;
-    flex-wrap: wrap;
     background-color: $color-primary-dark;
-    justify-content: center;
-    align-content: flex-start;
     z-index: 5;
+
+    ul#sidebar-buttons {
+      display: flex;
+      padding: 0;
+      margin: 0;
+      list-style: none;
+    }
 
     @media (orientation: landscape) {
       border-right: 0.3rem solid darken($color-primary-dark, 4);
 
       // on desktop rotate the sidebar buttons vertically
       ul#sidebar-buttons {
-        display: flex;
         transform: rotate(-90deg);
+        position: relative;
+        top: 63.2rem;
       }
     }
 
     @media (orientation: portrait) {
-        justify-content: flex-start;
-        padding-left: 1rem;
-        height: $v-scr-nav-thickness;
-        width: 100vw;
+      border-bottom: 0.3rem solid darken($color-primary-dark, 4);
+      transition: opacity .5s ease;
+
+      ul#sidebar-buttons {
+        justify-content: start;
+      }
+
+      height: $v-scr-nav-thickness;
+      width: 100vw;
     }
 
     li {
-        height: 6.5rem;
-        padding: 2rem;
-
-        @media (orientation: portrait) {
-            height: 100%;
-            flex-basis: $v-scr-nav-thickness;
-            span.link-text {
-              display: none;
-            }
-        }
-
         display: flex;
         justify-content: center;
         align-items: center;
         list-style: none;
 
+        @media (orientation: portrait) {
+          height: 100%;
+          padding: 1.5rem;
+
+          flex-basis: $v-scr-nav-thickness;
+          span.link-text {
+            display: none;
+          }
+        }
+
         @media (orientation: landscape) {
-            span.link-text {
-              color: $color-primary-white;
-              font-size: 2.5rem;
-              margin-left: 1.5rem;
-              white-space: nowrap;
-            }
+          height: 6.5rem;
+          padding: 2rem;
+
+          span.link-text {
+            color: $color-primary-white;
+            font-size: 2.5rem;
+            margin-left: 1.5rem;
+            white-space: nowrap;
+          }
+
+          &:last-child {
+            padding-right: 3.8rem;
+          }
         }
 
         &:hover {
@@ -86,7 +100,7 @@
     }
     .bars, .backdrop, .drawer {
         @media (orientation: landscape) {
-            visibility: hidden;
+            display: none;
         }
     }
 
